<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rviz_pac</name>
  <version>0.0.0</version>
  <description>RViz PAC</description>
  <maintainer email="SauravAg@seas.upenn.edu">Saurav Agarwal</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>pluginlib</depend>
  <depend>rviz_common</depend>
  <depend>geometry_msgs</depend>
  <depend>rviz_rendering</depend>
  <depend>async_pac_gnn_interfaces</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
